--- a/snap/index.html
+++ b/snap/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>Hello, Snaps!</title>
-    <link rel="icon" type="image/svg" href="./images/icon.svg"/>
   </head>
 
   <body>
@@ -10,22 +9,13 @@
     <details>
       <summary>Instructions</summary>
       <ul>
-        <li>First, click "Connect". Then, try out the other buttons!</li>
-        <li>Please note that:</li>
-        <ul>
-          <li>
-            The <code>snap.manifest.json</code> and <code>package.json</code> must be located in the server root directory..
-          </li>
-          <li>
-            The Snap bundle must be hosted at the location specified by the <code>location</code> field of <code>snap.manifest.json</code>.
-          </li>
+        <li>Click "connect" to install snap.</li>
         </ul>
       </ul>
     </details>
     <br/>
 
     <button class="connect">Connect</button>
-    <button class="sendHello">Send Hello</button>
   </body>
 
   <script>
@@ -45,21 +35,6 @@
           wallet_snap: { [snapId]: {} },
         }]
       })
-    }
-
-    // here we call the snap's "hello" method
-    async function send () {
-      try {
-        const response = await ethereum.request({
-          method: 'wallet_invokeSnap',
-          params: [snapId, {
-            method: 'hello'
-          }]
-        })
-      } catch (err) {
-        console.error(err)
-        alert('Problem happened: ' + err.message || err)
-      }
     }
   </script>
 </html>
